--- a/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_LBA_l_braz_por.yml
@@ -412,17 +412,17 @@
  LBA_islamic_legion_idea_desc: "Libya has recreated the Islamic Legion, a force which is intended to act as Gaddafi's proxy in various conflicts around the glove.\n\n§YThis idea will be removed if we Libya is not ruled by a Gaddafi.§!"
  LBA_employing_charles_taylor: "Charles Taylor"
  LBA_employing_charles_taylor_desc: "The Libyan government has employed the services of the exiled Charles Taylor. The experienced guerrilla leader is instructing Libya security personnel on handling possible insurgencies.\n\n§YThis idea will be removed if we Libya is not ruled by a Gaddafi.§!"
- LBA_ethiopia_somali_resistance: "Ogaden Resistance"
- LBA_ethiopia_somali_resistance_desc: "The Somali clans of the Ogaden region are conducting an insurgency against their Ethiopian rulers."
+ LBA_ethiopia_somali_resistance: "Resistência de Ogaden"
+ LBA_ethiopia_somali_resistance_desc: "Os clãs somalis da região de Ogaden estão a conduzir uma insurreição contra os seus governantes etíopes."
  LBA_hakem_al_mutairi: "Hakem Al-Mutairi"
- LBA_hakem_al_mutairi_desc: "Gaddafi is employing the services of Hakem Al-Mutairi, a Kuwaiti cleric and leader of the Ummah Party in order to expand Libyan influence in the Gulf region.\n\n§YThis idea will be removed if we Libya is not ruled by a Gaddafi.§!"
- LBA_nationalised_economy_1: "Nationalised Economy"
- LBA_nationalised_economy_1_desc: "Libya is following an economic model where most of the industries in the country are owned, or at least heavily controlled, by the state."
- LBA_privatised_economy_1: "Privatised Economy"
- LBA_privatised_economy_1_desc: "After decades of government control, Libya has started privatising large sectors of their economy, causing an increase in economic growth."
- LBA_humbled_the_un: "Humbled The UN"
- LBA_humbled_the_un_desc: "Muammar Gaddafi's fiery speech at the UN has lifted Libya in the spotlight, showing the world that they are not to be trifled with."
- LBA_humbled_by_the_un: "Muammar Gaddafi's fiery speech at the UN was met with ridicule as he was booed of the podium. Seems Gaddafi is not as charismatic as he thinks."
+ LBA_hakem_al_mutairi_desc: "Gaddafi está a contratar os serviços de Hakem Al-Mutairi, um clérigo kuwaitiano e líder do Partido Ummah, a fim de expandir a influência líbia na região do Golfo.\n\n§YEsta ideia será eliminada se nós, a Líbia, não formos governados por um Gaddafi.§!"
+ LBA_nationalised_economy_1: "Economia Nacionalizada"
+ LBA_nationalised_economy_1_desc: "A Líbia segue um modelo económico em que a maioria das indústrias do país são propriedade, ou pelo menos fortemente controladas, pelo Estado."
+ LBA_privatised_economy_1: "Economia Privatizada"
+ LBA_privatised_economy_1_desc: "Após décadas de controlo governamental, a Líbia começou a privatizar grandes sectores da sua economia, causando um aumento no crescimento económico."
+ LBA_humbled_the_un: "Humilhou a ONU"
+ LBA_humbled_the_un_desc: "O discurso inflamado de Muammar Gaddafi na ONU colocou a Líbia no centro das atenções, mostrando ao mundo que não se deve brincar com ela."
+ LBA_humbled_by_the_un: "O discurso inflamado de Muammar Gaddafi na ONU foi recebido com ridículo quando ele foi vaiado no pódio. Parece que Gaddafi não é tão carismático quanto pensa."
  LBA_people_motivated_to_work: "People Motivated To Work"
  LBA_people_motivated_to_work_desc: "Gaddafi's latest trick of throwing money on the streets of Tripoli has motivated people that international aid agencies and charities are nothing but scams trying to get people hooked on money. They are now working extra hard to make sure they never have to beg for money again."
  LBA_people_unmotivated_to_work: "People Unmotivated To Work"
