--- a/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
@@ -1,6 +1,6 @@
 ﻿l_braz_por:
  Cheap_Labor: "Mão de obra barata"
- Cheap_Labor_desc: "Nascida de padrões históricos de exploração colonial e mão de obra não qualificada em massa, a força de trabalho da Índia continua abundante e barata. Embora este excedente de mão-de-obra tenha estimulado o crescimento industrial pós-independência, continua a alimentar um ciclo de desigualdade e agitação social que coloca o país estabilidade em terreno instável."
+ Cheap_Labor_desc: "Nascida de padrões históricos de exploração colonial e de mão-de-obra não qualificada em massa, a força de trabalho de [ROOT.GetName] continua abundante e barata. Embora este excedente de mão-de-obra tenha estimulado o crescimento industrial pós-independência, continua a alimentar um ciclo de desigualdade e agitação social que coloca a estabilidade nacional em terreno instável."
  RAJ_iri_fake_ns: "Indústria Militar Altamente Corrupta"
  RAJ_iri_fake_ns_desc: "O legado complexo da era License Raj da Índia, caracterizada por forte regulamentação e burocracia, ainda persiste na indústria de defesa. Embora as reformas da década de 1990 tenham aberto portas para a expansão industrial civil, o setor militar continua sendo uma rede de corrupção e ineficiência, remonta a processos de aquisição opacos e à falta de responsabilização herdada de décadas passadas."
  RAJ_re_fake_militar: "Militar altamente desorganizado"
