--- a/localisation/french/MD_focus_POL_l_french.yml
+++ b/localisation/french/MD_focus_POL_l_french.yml
@@ -389,47 +389,47 @@
  POL_reducing_unemployment_desc: "Grâce aux nouveaux investisseurs, un grand nombre de nouveaux emplois sont apparus sur le marché du travail. Cela nous permettra de réduire considérablement le chômage et d’accroître l’efficacité de notre économie."
  POL_success_through_progress: "Le succès grâce au progrès"
  POL_success_through_progress_desc: "Il existe un intérêt croissant pour le matériel informatique sur le marché. L'industrie informatique se développe à un rythme alarmant. Si nous voulons suivre le rythme des géants, nous devons commencer dès maintenant."
- POL_eurozone_acceptation: "Acceptation Of The Eurozone"
- POL_eurozone_acceptation_desc: "Joining the Eurozone, whether we are in the EU or not, is a brave step. However, it will allow us to bring Western countries and new investors closer together."
- POL_proximity_to_the_western_market: "Proximity To The Western Market"
- POL_proximity_to_the_western_market_desc: "The Western market is more developed than ours, mainly due to the previous long-ruling communist rule. We should finally start to unite with our western neighbors."
- POL_higer_retirement: "Higher Retirement Age"
- POL_higer_retirement_desc: "The current society is aging too fast. Young people go abroad and there is no one to work with. If we increase the retirement age, maybe we can keep the economy on track."
- POL_pro_ecological_projects: "Pro-Ecological Projects"
- POL_pro_ecological_projects_desc: "While developing the economy, we must also focus on the progressing global warming. We must work together now to eliminate this threat by eliminating air, water and soil pollution."
- POL_funding_nfz: "Funding NFZ"
- POL_funding_nfz_desc: "Narodowy Fundusz Zdrowia (pol. National Health Fund) has recently been heavily neglected by the government. After all, the health of citizens is the most important thing. Investments in new clinics and renovation of hospitals will definitely improve the quality of life of citizens and reduce queues to doctors."
- POL_english_lessons: "English Lessons In Elementary Schools"
- POL_english_lessons_desc: "English is the Latin of our time, especially when it comes to Europe. That is why it is so important to teach our youth this language from an early age."
- POL_orientational_freedom: "Orientational And Sexual Freedom For Everyone"
- POL_orientational_freedom_desc: "World War II clearly showed us what intolerance on the part of another person can lead to. Poland should set an example of a country where everyone is welcome, regardless of origin, religion or sexual orientation."
- POL_modern_equipment_for_special_services: "Modern Equipment For Special Services"
- POL_modern_equipment_for_special_services_desc: "There are not as many terrorist attacks in Poland as in some Western or Eastern countries, but we still struggle with a lot of crime. We should start equipping police officers with better weapons and equipment, and other services will receive money for more modern equipment."
- POL_eurozone_opposition: "Opposition To The Eurozone"
- POL_eurozone_opposition_desc: "The Eurozone limits the development opportunities of the countries that have agreed to it. As a proud nation, we should strive for independence and should never allow our rights to be restricted. The European Union itself is a big problem for us."
- POL_strengthen_east_border: "Strengthen East Border"
- POL_strengthen_east_border_desc: "The dictatorial regime in Belarus is starting to worry us more and more. Poland is the first line of defense against Russia and Belarus, so we should increase security on our border."
- POL_disapproval_of_accepting_illegal_immigrants: "Disapproval Of Accepting Illegal Immigrants"
- POL_disapproval_of_accepting_illegal_immigrants_desc: "Accepting immigrants who do not cross the border with legal documents can pose a threat to us. Many EU countries do not share these views, which results in many terrorist attacks. We will not repeat their mistakes and we will screen anyone who wants to cross the eastern or south-eastern border."
- POL_condemnation_of_russian_policy: "Condemnation Of Russian Policy"
- POL_condemnation_of_russian_policy_desc: "Russia, despite the collapse of the Soviet Union, still strongly influences the politics of other countries. We must condemn such acts and show Russia that Poland is ready to oppose its tyrannical policies."
- POL_development_of_the_capitals_office_sector: "Development Of The Capital's Office Sector"
- POL_development_of_the_capitals_office_sector_desc: "The capital of the country should stand out from other cities. The business sector is not very well developed in our country, so that's where we'll start."
- POL_maintenance_of_silesian_mines: "Maintenance Of Silesian Mines"
- POL_maintenance_of_silesian_mines_desc: "The mining industry is slowly fading into oblivion, but as long as we benefit from it, we should continue to develop our mines and increase coal production."
- POL_demand_full_war_reparations_from_germany: "Demand Full War Reparations From Germany"
- POL_demand_full_war_reparations_from_germany_desc: "Germany took too long to pay us back reparations for World War II. We should finally press them down and demand this compensation."
- POL_judicial_reform: "Judicial Reform"
- POL_judicial_reform_desc: "Our courts are slow and operate on antiquated communist principles. We should increase their influence in our country."
- POL_removal_of_communist_monuments: "Removal Of Communist Monuments"
- POL_removal_of_communist_monuments_desc: "Communist monuments are associated only with the outdated totalitarian regime. We should finally demolish these relics of the past."
- POL_continuation_of_old_school: "Continuation Of The Old-School"
- POL_continuation_of_old_school_desc: "Continuation of the then teaching methods is a good way to teach young people about the past of our country."
- POL_focus_on_general_knowledge: "Focus On General Knowledge"
- POL_focus_on_general_knowledge_desc: "The most important thing is knowledge about the world around us. Expanding general knowledge, instead of focusing on one thing, will set our students' minds to a deeper perception of the world."
- POL_free_coursebooks_in_elementary_schools: "Promoting Free Lessons"
- POL_free_coursebooks_in_elementary_schools_desc: "There are families who cannot afford to buy basic coursebooks for their children. Thanks to the government's program of free textbooks, we will be able to provide such children with a completely free education in primary schools."
- POL_west_inspirations: "West Inspirations"
+ POL_eurozone_acceptation: "Acceptation de la zone euro"
+ POL_eurozone_acceptation_desc: "Rejoindre la zone euro, que nous soyons ou non membres de l’UE, est une démarche courageuse. Mais cela permettra de rapprocher les pays occidentaux et les nouveaux investisseurs."
+ POL_proximity_to_the_western_market: "Proximité du marché occidental"
+ POL_proximity_to_the_western_market_desc: "Le marché occidental est plus développé que le nôtre, principalement en raison du régime communiste de longue date. Nous devrions enfin commencer à nous unir avec nos voisins occidentaux."
+ POL_higer_retirement: "Âge de la retraite plus élevé"
+ POL_higer_retirement_desc: "La société actuelle vieillit trop vite. Les jeunes partent à l’étranger et il n’y a personne avec qui travailler. Si nous relevons l’âge de la retraite, nous pourrons peut-être maintenir l’économie sur la bonne voie."
+ POL_pro_ecological_projects: "Projets pro-écologiques"
+ POL_pro_ecological_projects_desc: "Tout en développant l’économie, nous devons également nous concentrer sur la progression du réchauffement climatique. Nous devons travailler ensemble dès maintenant pour éliminer cette menace en éliminant la pollution de l’air, de l’eau et du sol."
+ POL_funding_nfz: "Financement de la ZNF"
+ POL_funding_nfz_desc: "Narodowy Fundusz Zdrowia (Fonds national de santé polonais) a récemment été fortement négligé par le gouvernement. Après tout, la santé des citoyens est la chose la plus importante. Les investissements dans de nouvelles cliniques et la rénovation des hôpitaux amélioreront certainement la qualité de vie des citoyens et réduiront les files d'attente chez les médecins."
+ POL_english_lessons: "Cours d'anglais dans les écoles primaires"
+ POL_english_lessons_desc: "L'anglais est le latin de notre époque, surtout lorsqu'il s'agit de l'Europe. C’est pourquoi il est si important d’enseigner cette langue à nos jeunes dès leur plus jeune âge."
+ POL_orientational_freedom: "Orientation et liberté sexuelle pour tous"
+ POL_orientational_freedom_desc: "La Seconde Guerre mondiale nous a clairement montré à quoi peut conduire l'intolérance de la part d'autrui. La Pologne devrait donner l’exemple d’un pays où tout le monde est le bienvenu, sans distinction d’origine, de religion ou d’orientation sexuelle."
+ POL_modern_equipment_for_special_services: "Équipement moderne pour services spéciaux"
+ POL_modern_equipment_for_special_services_desc: "Il n’y a pas autant d’attentats terroristes en Pologne que dans certains pays occidentaux ou orientaux, mais nous sommes toujours confrontés à une forte criminalité. Nous devrions commencer à doter les policiers de meilleures armes et équipements, et d’autres services recevront de l’argent pour des équipements plus modernes."
+ POL_eurozone_opposition: "Opposition à la zone euro"
+ POL_eurozone_opposition_desc: "La zone euro limite les opportunités de développement des pays qui l’ont acceptée. En tant que nation fière, nous devons lutter pour l’indépendance et ne devons jamais permettre que nos droits soient restreints. L’Union européenne elle-même constitue pour nous un gros problème."
+ POL_strengthen_east_border: "Renforcer la frontière Est"
+ POL_strengthen_east_border_desc: "Le régime dictatorial du Bélarus commence à nous inquiéter de plus en plus. La Pologne constitue la première ligne de défense contre la Russie et la Biélorussie. Nous devons donc renforcer la sécurité à nos frontières."
+ POL_disapproval_of_accepting_illegal_immigrants: "Désapprobation de l’acceptation d’immigrants illégaux"
+ POL_disapproval_of_accepting_illegal_immigrants_desc: "Accepter des immigrants qui ne traversent pas la frontière avec des documents légaux peut constituer une menace pour nous. De nombreux pays de l’UE ne partagent pas ces points de vue, ce qui entraîne de nombreux attentats terroristes. Nous ne répéterons pas leurs erreurs et nous contrôlerons toute personne souhaitant franchir la frontière est ou sud-est."
+ POL_condemnation_of_russian_policy: "Condamnation de la politique russe"
+ POL_condemnation_of_russian_policy_desc: "La Russie, malgré l’effondrement de l’Union soviétique, continue d’influencer fortement la politique des autres pays. Nous devons condamner de tels actes et montrer à la Russie que la Pologne est prête à s’opposer à sa politique tyrannique."
+ POL_development_of_the_capitals_office_sector: "Développement du secteur des bureaux de la capitale"
+ POL_development_of_the_capitals_office_sector_desc: "La capitale du pays devrait se démarquer des autres villes. Le secteur des affaires n'est pas très développé dans notre pays, c'est donc par là que nous commencerons."
+ POL_maintenance_of_silesian_mines: "Entretien des mines de Silésie"
+ POL_maintenance_of_silesian_mines_desc: "L’industrie minière tombe peu à peu dans l’oubli, mais tant que nous en bénéficions, nous devons continuer à développer nos mines et à augmenter la production de charbon."
+ POL_demand_full_war_reparations_from_germany: "Exiger des réparations de guerre complètes de l’Allemagne"
+ POL_demand_full_war_reparations_from_germany_desc: "L’Allemagne a mis trop de temps à nous rembourser les réparations de la Seconde Guerre mondiale. Nous devrions enfin les réprimer et exiger cette compensation."
+ POL_judicial_reform: "Réforme judiciaire"
+ POL_judicial_reform_desc: "Nos tribunaux sont lents et fonctionnent selon des principes communistes désuets. Nous devrions accroître leur influence dans notre pays."
+ POL_removal_of_communist_monuments: "Suppression des monuments communistes"
+ POL_removal_of_communist_monuments_desc: "Les monuments communistes ne sont associés qu’au régime totalitaire dépassé. Nous devrions enfin démolir ces reliques du passé."
+ POL_continuation_of_old_school: "Poursuite de la vieille école"
+ POL_continuation_of_old_school_desc: "La poursuite des méthodes d'enseignement d'alors est un bon moyen d'enseigner aux jeunes le passé de notre pays."
+ POL_focus_on_general_knowledge: "Concentrez-vous sur les connaissances générales"
+ POL_focus_on_general_knowledge_desc: "Le plus important est la connaissance du monde qui nous entoure. L'élargissement des connaissances générales, au lieu de se concentrer sur une seule chose, amènera l'esprit de nos étudiants à une perception plus profonde du monde."
+ POL_free_coursebooks_in_elementary_schools: "Promouvoir les leçons gratuites"
+ POL_free_coursebooks_in_elementary_schools_desc: "Certaines familles n’ont pas les moyens d’acheter des manuels de cours de base pour leurs enfants. Grâce au programme gouvernemental de manuels gratuits, nous pourrons offrir à ces enfants une éducation totalement gratuite dans les écoles primaires."
+ POL_west_inspirations: "Inspirations occidentales"
  POL_west_inspirations_desc: "The curriculum practiced in Finland or Germany, for example, is much more effective than our outdated system. We need to focus on learning specific subjects, such as management or economics."
  POL_preparing_students_for_adulthood: "Preparing Students For Adulthood"
  POL_preparing_students_for_adulthood_desc: "Teaching teachers to use modern equipment, such as interactive whiteboards, will make it easier for them to get through the teaching material, and students will be more interested in the lesson when they see modern technology instead of regular textbooks."
@@ -3257,7 +3257,7 @@
  POL_connections_to_eu: "Connections To EU"
  POL_international_law: "Follows International Law"
  POL_spoke_against_russia: "Spoke Against Russia"
- POL_relied_on_europe: "Relience On Europe"
+ POL_relied_on_europe: "Reliance On Europe"
  POL_bought_leopards: "Arms Purchases"
  POL_reached_to_usa: "Reached To USA"
  POL_reached_to_russia: "Reached To Russia"
