--- a/localisation/french/MD_focus_RAJ_l_french.yml
+++ b/localisation/french/MD_focus_RAJ_l_french.yml
@@ -1,6 +1,6 @@
 ﻿l_french:
  Cheap_Labor: "Main d'oeuvre peu chère"
- Cheap_Labor_desc: "Née de modèles historiques d'exploitation coloniale et de main-d'œuvre massive non qualifiée, la main-d'œuvre indienne reste abondante et bon marché. Bien que cet excédent de main-d’œuvre ait stimulé la croissance industrielle après l’indépendance, il continue d’alimenter un cycle d’inégalités et de troubles sociaux qui met en péril la stabilité nationale."
+ Cheap_Labor_desc: "Née de modèles historiques d'exploitation coloniale et de main-d'œuvre massive non qualifiée, la main-d'œuvre de [ROOT.GetName] reste abondante et peu coûteuse. Bien que cet excédent de main-d’œuvre ait stimulé la croissance industrielle après l’indépendance, il continue d’alimenter un cycle d’inégalités et de troubles sociaux qui met en péril la stabilité nationale."
  RAJ_iri_fake_ns: "Une industrie militaire hautement corrompue"
  RAJ_iri_fake_ns_desc: "L'héritage complexe de l'ère License Raj en Inde, caractérisé par une réglementation lourde et des formalités administratives, persiste encore dans l'industrie de la défense. Alors que les réformes des années 1990 ont ouvert la porte à l’expansion industrielle civile, le secteur militaire reste un réseau de corruption et d’inefficacité, dont l’origine est l’opacité des processus d’approvisionnement et le manque de responsabilité hérité des décennies passées."
  RAJ_re_fake_militar: "Une armée très désorganisée"
@@ -50,7 +50,7 @@
  indian_event.3.t: "L’Inde nous invite à l’Association sud-asiatique de coopération régionale"
  indian_event.3.d: "L’Inde nous invite à l’Association sud-asiatique de coopération régionale, devrions-nous accepter d’y adhérer ?"
  indian_event.3.a: "Bien sûr"
- indian_event.3.b: "Sorry, no"
+ indian_event.3.b: "Désolé, non."
  RAJ_act_east_policy: "Politique Agir à l’Est"
  RAJ_act_east_policy_desc: "La « politique Act East » est une initiative de politique étrangère du gouvernement indien qui a été introduite pour renforcer l'engagement de l'Inde avec les pays de la région Asie-Pacifique, en particulier l'Asie du Sud-Est. Cela peut être considéré comme une expansion et une nouvelle image de marque de la précédente « politique du regard vers l’Est » lancée au début des années 1990."
  act_east_pol_tt: "§YNous allons lancer le programme politique Act East§!"
@@ -70,7 +70,7 @@
  indian_event.4.t: "Invitation à BIMSTEK"
  indian_event.4.d: "L'Inde nous invite au programme de partenariat BIMSTEK, devons-nous y adhérer ?"
  indian_event.4.a: "Bien sûr!"
- indian_event.4.b: "Sorry, no"
+ indian_event.4.b: "Désolé, non."
  RAJ_befriend_butan_and_nepal: "Liez-vous d’amitié avec le Népal et le Bhoutan"
  RAJ_befriend_butan_and_nepal_desc: "L'Inde, le Bhoutan et le Népal partagent des liens historiques, culturels et géographiques profondément enracinés. L’Inde a historiquement joué un rôle crucial dans le développement et la stabilité de ces nations himalayennes. Le Bhoutan entretient une relation unique avec l’Inde, marquée par une coopération diplomatique, économique et stratégique étroite. L'Inde a aidé le Bhoutan dans divers projets de développement et questions de sécurité, en maintenant un partenariat solide et amical."
  RAJ_support_nov_idea: "Soutien militaire indien"
@@ -118,54 +118,54 @@
  RAJ_stratpar_russi_desc: "Malgré les bonnes relations entre la Chine et la Russie, la Russie est depuis l’époque de l’URSS notre partenaire fiable dans le domaine du commerce et de la défense. Il est temps de renouveler cette relation."
  RAJ_stratpar_soaf: "Partenariat stratégique avec l'Afrique du Sud"
  RAJ_stratpar_soaf_desc: "L'Afrique du Sud est l'une des économies à la croissance la plus rapide au monde. Comme nous, ils sont déterminés à améliorer le commerce mondial et à trouver des partenaires."
- RAJ_stratpar_braz: "Strategic Partnership with Brazil"
- RAJ_stratpar_braz_desc: "Brazil has long been on remotely good terms. we must find methods of improving trade with them and strengthening political ties."
- RAJ_looking_west: "Looking West"
- RAJ_looking_west_desc: "Despite its traditionally neutral position, India has relatively good relations with Western countries, which come not only trade, but also a common enemy - China."
- RAJ_friendship_with_israel: "Friendship with Israel"
- RAJ_friendship_with_israel_desc: "India-Israel relations have a long history of joint cooperation. In the new, 21st century, these connections need to be confirmed."
- RAJ_friendship_with_france: "Friendship with France"
- RAJ_friendship_with_france_desc: "After signing a strategic pact with France in 1998, France became one of India's largest partners within NATO. These relationships need to be deepened in a productive way."
- RAJ_become_major_non_nato_allies: "Ally to NATO"
- RAJ_become_major_non_nato_allies_desc: "Perhaps, in order to be able to go against China and Pakistan, we need to improve relations with the West enough to sign an association with NATO or even something more. Given current trends, perhaps the West will meet us with open hands."
- RAJ_military_coop_with_us: "Military-Technical Cooperation with U.S"
- RAJ_military_coop_with_us_desc: "The USA is a superpower, with the most advanced developments in terms of defense. We need to cooperate with them and improve our defense capabilities."
- RAJ_tradedeals_with_us: "Trade Deals with U.S"
- RAJ_tradedeals_with_us_desc: "Trade with the United States is a consistent step in our policy of cooperation with the West. We will find something to interest each other in terms of trade."
- indian_event.6.t: "Indian Proposal"
- indian_event.6.d: "Since the recent Indian alignment with us, they ask us to revoke Major Non-NATO ally status from Pakistan."
+ RAJ_stratpar_braz: "Partenariat stratégique avec le Brésil"
+ RAJ_stratpar_braz_desc: "Le Brésil entretient depuis longtemps des relations vaguement bonnes. nous devons trouver des méthodes pour améliorer les échanges commerciaux avec eux et renforcer les liens politiques."
+ RAJ_looking_west: "Regarder vers l'ouest"
+ RAJ_looking_west_desc: "Malgré sa position traditionnellement neutre, l'Inde entretient des relations relativement bonnes avec les pays occidentaux, qui dépendent non seulement du commerce, mais également d'un ennemi commun : la Chine."
+ RAJ_friendship_with_israel: "Amitié avec Israël"
+ RAJ_friendship_with_israel_desc: "Les relations entre l’Inde et Israël ont une longue histoire de coopération conjointe. Dans le nouveau 21e siècle, ces liens doivent être confirmés."
+ RAJ_friendship_with_france: "Amitié avec la France"
+ RAJ_friendship_with_france_desc: "Après avoir signé un pacte stratégique avec la France en 1998, la France est devenue l'un des principaux partenaires de l'Inde au sein de l'OTAN. Ces relations doivent être approfondies de manière productive."
+ RAJ_become_major_non_nato_allies: "Allié à l'OTAN"
+ RAJ_become_major_non_nato_allies_desc: "Peut-être que pour pouvoir affronter la Chine et le Pakistan, nous devons améliorer suffisamment nos relations avec l’Occident pour signer une association avec l’OTAN ou même quelque chose de plus. Compte tenu des tendances actuelles, peut-être que l’Occident nous accueillera les mains ouvertes."
+ RAJ_military_coop_with_us: "Coopération militaro-technique avec les États-Unis"
+ RAJ_military_coop_with_us_desc: "Les États-Unis sont une superpuissance dotée des développements les plus avancés en matière de défense. Nous devons coopérer avec eux et améliorer nos capacités de défense."
+ RAJ_tradedeals_with_us: "Accords commerciaux avec les États-Unis"
+ RAJ_tradedeals_with_us_desc: "Le commerce avec les États-Unis constitue une étape cohérente dans notre politique de coopération avec l’Occident. Nous trouverons de quoi nous intéresser mutuellement en termes d'échanges."
+ indian_event.6.t: "Proposition indienne"
+ indian_event.6.d: "Depuis le récent alignement de l’Inde avec nous, ils nous demandent de révoquer au Pakistan le statut d’allié majeur non membre de l’OTAN."
  indian_event.6.a: "Bien sûr!"
- indian_event.6.b: "Sorry, no"
- indian_event.667.t: "U.S. Agrees."
- indian_event.667.d: "They will remove MNNA Status from Pakistan."
+ indian_event.6.b: "Désolé, non."
+ indian_event.667.t: "Les États-Unis sont d’accord."
+ indian_event.667.d: "Ils supprimeront le statut MNNA du Pakistan."
  indian_event.667.a: "Super"
- indian_event.668.t: "U.S. Denied our proposal."
- indian_event.668.d: "Pakistan will remain a major non-nato ally of U.S."
+ indian_event.668.t: "Les États-Unis ont refusé notre proposition."
+ indian_event.668.d: "Le Pakistan restera un allié majeur des États-Unis, non membre de l’OTAN."
  indian_event.668.a: "Bruh"
- RAJ_support_taiwan: "Support Taiwan"
- RAJ_support_taiwan_desc: "Although Taiwan claims many territories that are contrary to our interests, it may be worth supporting them against a common enemy - the PRC."
- RAJ_indian_modern_prog: "Applying for USAID"
- RAJ_indian_modern_prog_desc: "American aid programs have long become commonplace in India. It may be worth improving and strengthening cooperation in this area."
- RAJ_joining_nato: "Joining NATO"
- RAJ_joining_nato_desc: "Although NATO operates exclusively in the Euro-Atlantic region, perhaps we can convince the head of NATO to expand the concept of NATO and accept us into it."
- RAJ_SCO_join: "Joining SCO"
- RAJ_SCO_join_desc: "Although our relationship with China is strained, our relationship with Russia is quite productive. Perhaps we will be able to enter the SCO structure, despite all the contradictions with the PRC."
- RAJ_cont_non_aligned_polic: "Continue the Non-aligned Path"
- RAJ_cont_non_aligned_polic_desc: "India has traditionally been on the path of non-alignment and complete neutrality. We should not look for new allies and cross the boundaries of what is permitted. We must keep our distance."
- RAJ_isolationist_policies: "Isolationism Policies"
- RAJ_isolationist_policies_desc: "Despite our trade, social isolation from the rest of the world may be beneficial."
- RAJ_boosting_our_local_market: "Boosting local market"
- RAJ_boosting_our_local_market_desc: "Strengthening the domestic market is a consistent step towards achieving complete autonomy for India from this world."
- RAJ_active_support_of_stete_woned_shiet: "Active Support"
- RAJ_active_support_of_stete_woned_shiet_desc: "We must support not only market relations in the country, but also state corporations that will regulate the most important aspects of the economy."
- RAJ_india_first: "India First"
- RAJ_india_first_desc: "India must be above all things. We are alone in this world and we need to realize this."
- RAJ_indian_autarky_effort: "Indian Sphere of Influence"
- RAJ_indian_autarky_effort_desc: "The time has come not just to improve relations with our partners, but also to build our own sphere of influence."
- RAJ_self_sufficient_market: "New Wave Ideas"
- RAJ_self_sufficient_market_desc: "It's time to admit that our path is a new milestone in India's ideological paradigm - we are building our own, new future."
- RAJ_asking_nato_help_pak: "Kick Out Pakistan"
- RAJ_asking_nato_help_pak_desc: "Pakistan has long been a US ally outside NATO. We need to exclude their presence in cooperation with the West and take their place."
+ RAJ_support_taiwan: "Soutenez Taïwan"
+ RAJ_support_taiwan_desc: "Même si Taiwan revendique de nombreux territoires contraires à nos intérêts, cela vaut peut-être la peine de les soutenir contre un ennemi commun : la RPC."
+ RAJ_indian_modern_prog: "Faire une demande à l'USAID"
+ RAJ_indian_modern_prog_desc: "Les programmes d’aide américains sont depuis longtemps devenus monnaie courante en Inde. Il pourrait être utile d’améliorer et de renforcer la coopération dans ce domaine."
+ RAJ_joining_nato: "Rejoindre l'OTAN"
+ RAJ_joining_nato_desc: "Même si l'OTAN opère exclusivement dans la région euro-atlantique, nous pourrons peut-être convaincre le chef de l'OTAN d'élargir le concept de l'OTAN et de nous y accepter."
+ RAJ_SCO_join: "Rejoindre SCO"
+ RAJ_SCO_join_desc: "Même si nos relations avec la Chine sont tendues, nos relations avec la Russie sont plutôt productives. Peut-être pourrons-nous entrer dans la structure de l'OCS, malgré toutes les contradictions avec la RPC."
+ RAJ_cont_non_aligned_polic: "Continuer le chemin non aligné"
+ RAJ_cont_non_aligned_polic_desc: "L’Inde est traditionnellement sur la voie du non-alignement et de la neutralité totale. Nous ne devons pas chercher de nouveaux alliés et dépasser les limites de ce qui est permis. Nous devons garder nos distances."
+ RAJ_isolationist_policies: "Politiques d'isolationnisme"
+ RAJ_isolationist_policies_desc: "Malgré nos échanges commerciaux, l’isolement social du reste du monde peut être bénéfique."
+ RAJ_boosting_our_local_market: "Dynamiser le marché local"
+ RAJ_boosting_our_local_market_desc: "Le renforcement du marché intérieur est une étape cohérente vers l’obtention d’une autonomie complète de l’Inde par rapport au reste du monde."
+ RAJ_active_support_of_stete_woned_shiet: "Assistance active"
+ RAJ_active_support_of_stete_woned_shiet_desc: "Nous devons soutenir non seulement les relations de marché dans le pays, mais également les sociétés d'État qui réguleront les aspects les plus importants de l'économie."
+ RAJ_india_first: "L'Inde d'abord"
+ RAJ_india_first_desc: "L'Inde doit être au-dessus de tout. Nous sommes seuls au monde et nous devons en prendre conscience."
+ RAJ_indian_autarky_effort: "Sphère d'influence indienne"
+ RAJ_indian_autarky_effort_desc: "Le moment est venu non seulement d’améliorer les relations avec nos partenaires, mais aussi de construire notre propre sphère d’influence."
+ RAJ_self_sufficient_market: "Nouvelle vague"
+ RAJ_self_sufficient_market_desc: "Il est temps d'admettre que notre chemin constitue une nouvelle étape dans le paradigme idéologique indien : nous construisons notre propre et nouvel avenir."
+ RAJ_asking_nato_help_pak: "Expulser le Pakistan"
+ RAJ_asking_nato_help_pak_desc: "Le Pakistan est depuis longtemps un allié des États-Unis en dehors de l’OTAN. Nous devons exclure leur présence en coopération avec l’Occident et prendre leur place."
  RAJ_indias_politics: "Indian Politics"
  RAJ_indias_politics_desc: "Indian politics is at the turning point of one millennium to another. How will its history be built?"
  indian_event.7.t: "Indian Politics"
