--- a/localisation/russian/MD_focus_RAJ_l_russian.yml
+++ b/localisation/russian/MD_focus_RAJ_l_russian.yml
@@ -1,6 +1,6 @@
 ﻿l_russian:
  Cheap_Labor: "Дешёвая рабочая сила"
- Cheap_Labor_desc: "Возникшая в результате колониальной эксплуатации и массового использования неквалифицированного труда, рабочая сила в Индии по-прежнему остаётся многочисленной и недорогой. Хотя этот избыток рабочей силы стимулировал промышленный рост в период после обретения независимости, он продолжает подпитывать цикл неравенства и социальных волнений, что ставит национальную стабильность на зыбкую почву."
+ Cheap_Labor_desc: "Рожденная историческими моделями колониальной эксплуатации и массового неквалифицированного труда, рабочая сила [ROOT.GetName] остается многочисленной и недорогой. Хотя этот избыток рабочей силы стимулировал промышленный рост после обретения независимости, он продолжает подпитывать цикл неравенства и социальных волнений, которые ставят национальную стабильность на шаткую почву."
  RAJ_iri_fake_ns: "Высококоррумпированная военная промышленность"
  RAJ_iri_fake_ns_desc: "Сложное наследие индийской эпохи лицензионного раджа, характеризующейся жёстким регулированием и бюрократией, до сих пор сохраняется в оборонной промышленности. В то время как реформы 1990-х годов открыли двери для развития гражданской промышленности, военный сектор остаётся паутиной коррупции и неэффективности, обусловленной непрозрачными процессами закупок и отсутствием подотчётности, унаследованными от прошлых десятилетий."
  RAJ_re_fake_militar: "Вооружённые силы с высокой степенью дезорганизации"
