--- a/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_defence_companies_l_simp_chinese.yml
@@ -35,11 +35,11 @@
  CHI_norinco_tank_manufacturer: "北方工业公司 - 装甲部门"
  CHI_norinco_materiel_manufacturer: "北方工业公司 - 材料部门"
  CHI_inner_mongolia_first_machinery_tank_manufacturer: "内蒙古第一机械厂"
- CHI_chengdu_aircraft_corp_aircraft_manufacturer: "成都飞机公司"
- CHI_shenyang_aircraft_corp_aircraft_manufacturer: "沈阳飞机工业集团"
- CHI_xian_aircraft_corp_aircraft_manufacturer: "西安飞机公司"
+ CHI_chengdu_aircraft_corp_aircraft_manufacturer: "成都飞机工业"
+ CHI_shenyang_aircraft_corp_aircraft_manufacturer: "沈阳飞机工业"
+ CHI_xian_aircraft_corp_aircraft_manufacturer: "西安飞机工业"
  CHI_china_south_industries_group_materiel_manufacturer: "中国南方工业集团"
- CHI_changhe_aircraft_corp_tank_manufacturer: "昌河飞机公司"
+ CHI_changhe_aircraft_corp_tank_manufacturer: "昌河飞机工业"
  CHI_china_state_shipbuilding_corporation_naval_manufacturer: "中国船舶工业集团"
  CHI_china_shipbuilding_industry_corporation_naval_manufacturer: "中国船舶重工集团"
  CHL_famae_materiel_manufacturer: "智利陆军军工厂 - 材料部门"
