--- a/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
@@ -1,6 +1,6 @@
 ﻿l_simp_chinese:
  Cheap_Labor: "廉价劳工"
- Cheap_Labor_desc: "脱胎于殖民剥削和大量非熟练劳动力的历史模式，印度的劳动力仍然充足且廉价。尽管这种劳动力过剩刺激了独立后的工业增长，但它继续助长不平等和社会动荡的循环，使国家稳定岌岌可危。"
+ Cheap_Labor_desc: "脱胎于殖民剥削和大量非熟练劳动力的历史模式，[ROOT.GetName]的劳动力仍然充足且廉价。尽管这种劳动力过剩刺激了独立后的工业增长，但它继续助长不平等和社会动荡的循环，使国家稳定岌岌可危。"
  RAJ_iri_fake_ns: "高度腐败的军工"
  RAJ_iri_fake_ns_desc: "印度许可证管理时代的复杂遗产，其特点是严格的监管和繁文缛节，仍然在国防工业中挥之不去。尽管20世纪90年代的改革为民用工业扩张打开了大门，但军事部门仍然是一个腐败和低效率的网络，这可以追溯到过去几十年继承的不透明采购流程和缺乏问责制。"
  RAJ_re_fake_militar: "军队高度混乱"
