--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -4700,7 +4700,7 @@
  VICTORY_POINTS_11859: "Santa Barbara"
  VICTORY_POINTS_11795: "San Bernardino"
  VICTORY_POINTS_9911: "Bakersfield"
- VICTORY_POINTS_11757: "Mission Viejo"
+ VICTORY_POINTS_11757: "Irvine"
  VICTORY_POINTS_6881: "Santa Maria"
  VICTORY_POINTS_7986: "El Centro"
  VICTORY_POINTS_823: "Palm Springs"
